<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D2526">

    <!--//Resultado-->

    <LinearLayout
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/escritura"
            android:textSize="40sp"
            android:gravity="right"
            android:textColor="#CCCCCC"
            android:layout_width="fill_parent"
            android:layout_height="120dp"/>
    </LinearLayout>

    <!--//Conteo-->

    <LinearLayout
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/resultado"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:gravity="right"
            android:textColor="#CCCCCC"
            android:layout_height="30dp"/>
    </LinearLayout>
    <!--//functions-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/seno"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#0B3436"
            android:padding="5dp"
            android:text="@string/sin"
            android:textColor="#C3C3C3"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/coseno"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#0B3436"
            android:padding="5dp"
            android:text="@string/cos"
            android:textColor="#C3C3C3"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/tangente"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#0B3436"
            android:padding="5dp"
            android:text="@string/tan"
            android:textColor="#C3C3C3"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/logaritmo"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#0B3436"
            android:padding="5dp"
            android:text="@string/log"
            android:textColor="#C3C3C3"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/phi"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#0B3436"
            android:padding="5dp"
            android:text="@string/phi"
            android:textColor="#C3C3C3"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
        <!--//functions1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/potencia"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/pow"
                android:background="#1D5657"
                android:textColor="#C3C3C3"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/raiz"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#1D5657"
                android:textColor="#C3C3C3"
                android:textStyle="bold"
                android:textSize="30sp"
                android:padding="5dp"
                android:text="@string/sqrt" />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/porcentaje"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#1D5657"
                android:textColor="#C3C3C3"
                android:textStyle="bold"
                android:textSize="30sp"
                android:padding="5dp"
                android:text="%" />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/borrar"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#1D5657"
                android:padding="5dp"
                android:text="@string/borrar"
                android:textColor="#C3C3C3"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--//segunda fila-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b7"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/siete"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b8"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/ocho"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b9"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/nueve"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/dividir"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#1D5657"
                android:padding="5dp"
                android:text="@string/dividir"
                android:textColor="#C3C3C3"
                android:textSize="30sp" />
        </LinearLayout>

        <!--//tercer fila-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b4"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/cuatro"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b5"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/cinco"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b6"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/seis"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/multiplicar"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/multiplicar"
                android:textColor="#C3C3C3"
                android:background="#1D5657"
                android:textSize="30sp"
                android:padding="5dp"/>
        </LinearLayout>

        <!--//cuarta fila-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/uno"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b2"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/dos"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b3"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/tres"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/restar"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/restar"
                android:textColor="#C3C3C3"
                android:background="#1D5657"
                android:textSize="30sp"
                android:padding="5dp"/>
        </LinearLayout>

        <!--//ultima fila-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b0"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/cero"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/bPunto"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/punto"
                android:textColor="#C3C3C3"
                android:background="#1A4B4C"
                android:textSize="30sp"
                android:padding="5dp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/igual"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#1A4B4C"
                android:textColor="#C3C3C3"
                android:textStyle="bold"
                android:textSize="30sp"
                android:padding="5dp"
                android:text="@string/igual" />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/sumar"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#1D5657"
                android:padding="5dp"
                android:text="@string/sumar"
                android:textColor="#C3C3C3"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>




